[project]
name = "customer_complain"
version = "0.1.0"
description = "ADK Agent to help with customer complains for a food delivery company"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.18.0",
    "google-cloud-aiplatform[adk,agent-engines]>=1.126.1",
    "google-cloud-storage>=3.0.0",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "toolbox-core>=0.5.0",
]

[tool.setuptools]
packages = ["customer_complain"]
